// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should remove selected fields from selectable 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inline-block"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
  repositionToCrossAxis={true}
>
  <EuiSelectable
    isPreFiltered={false}
    onChange={[Function]}
    optionMatcher={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp-label",
          "name": "@timestamp",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="date"
          />,
          "value": "@timestamp",
        },
      ]
    }
    searchProps={
      Object {
        "compressed": true,
      }
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter
    paddingSize="s"
  >
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;

exports[`Should render 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inline-block"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
  repositionToCrossAxis={true}
>
  <EuiSelectable
    isPreFiltered={false}
    onChange={[Function]}
    optionMatcher={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp-label",
          "name": "@timestamp",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="date"
          />,
          "value": "@timestamp",
        },
        Object {
          "label": "custom label for prop1",
          "name": "prop1",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="string"
          />,
          "value": "prop1",
        },
        Object {
          "label": "prop2-label",
          "name": "prop2",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="string"
          />,
          "value": "prop2",
        },
      ]
    }
    searchProps={
      Object {
        "compressed": true,
      }
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter
    paddingSize="s"
  >
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;
